Fix spacing of liquid shutter header

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -574,6 +574,10 @@
   grid-row: 1;
 }
 
+#liquid-shutter-header {
+  margin-top: -5px;
+}
+
 /* The slider itself */
 .slider {
   -webkit-appearance: none;  /* Override default CSS styles */
